[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "node.ext.yaml"
version = "2.0.0.dev0"
description = "Node tree implementation for yaml files"
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "Simplified BSD"}
authors = [{name = "Node Contributors", email = "dev@conestack.org"}]
keywords = ["node", "yaml"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "node.ext.fs>=1.99",
    "node>=1.99",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/conestack/node.ext.yaml"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGES.rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "LICENSE.rst"

[tool.hatch.build.targets.wheel]
packages = ["src/node"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
